# math_lib

./: .gitignore  CMakeLists.txt  LICENSE  README  config.cmake.in
doc/: build_intall_use
include/: matrix_lib.h  point.h  point.tpp  rational.h  vector_lib.h
include/matrix/: matrix_config.h  matrix_lib.tpp
src/: main.cxx  matrix_lib.cxx  matrix_lib.tpp  point.cxx  point.tpp  rational.cxx  vector_lib.cxx  vector_lib.tpp
tests/: CMakeLists.txt  test_matrix_basics.cxx  test_matrix_classification.cxx  test_matrix_determinant.cxx  test_matrix_lib.cxx  test_point.cxx  test_rational.cxx  test_utils.cxx  test_vector_basics.cxx  utils.cxx  utils.h
tests/matrix/: test_matrix_basics.cxx  test_matrix_classification.cxx  test_matrix_determinant.cxx
tests/point/: test_point.cxx
tests/rational/: test_double_to_rational.cxx  test_rational.cxx  test_rational_constructors.cxx  test_rational_operations.cxx
tests/vector/: test_vector_basics.cxx  test_vector_dimentions.cxx  test_vector_properties.cxx
